@@ -244,7 +244,9 @@ ifeq ($(mklibname),)
     mklibname           = lib$(1).so
 endif
 
-
+ifeq ($(mkshlib),)
+    $(error You need to define mkshlib in Make.rules.$(UNAME)) 
+endif
 
 SLICE2CPP		= $(bindir)/slice2cpp
 SLICE2XSD		= $(bindir)/slice2xsd
