@@ -8,6 +8,13 @@ Changes since version 1.1.0
   change also permits function overloading for ::Ice::Byte and char (which
   can be useful if you use both strings and byte sequences).
 
+- Portability fix in src/IceSSL/OpenSSLPluginI.cpp.
+
+- config/Make.rules now checks that mkshlib is defined.
+
+- src/IceUtil/CtrlCHandler.cpp now handles (ignores) EINTR returned by 
+  sigwait.
+
 Changes since version 1.0.1
 ---------------------------
 
